--- a/jitpack.yml
+++ b/jitpack.yml
@@ -4,5 +4,5 @@ jdk:
 before_install:
   - ./scripts/prepareJitpackEnvironment.sh
 install:
-  - FILE="-Dfile=FILE_NAME.aar"
+  - FILE="-Dfile=AdditionUtility-release.aar"
   - mvn install:install-file $FILE -DgroupId=com.github.ganpatmalekar -DartifactId=SampleAdditionSDK -Dversion=1.0.5 -Dpackaging=aar -DgeneratePom=true
