--- a/AdditionUtility/src/main/AndroidManifest.xml
+++ b/AdditionUtility/src/main/AndroidManifest.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application tools:targetApi="31">
-        <activity
-            android:name=".AdditionActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".AdditionActivity">
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
     </application>
 </manifest>
